k8s/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gbo-api-service
  namespace: gbo-api
  labels:
    app: gbo-api
spec:
  type: ClusterIP
  selector:
    app: gbo-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
